--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,22 +3,36 @@
     package="com.alejoestrada.misdeudores">
 
     <application
+        android:name=".MisDeudores"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LogInActivity2" />
-        <activity android:name=".SplashActivity2"
-            android:theme="@style/NoActionBar">
+        <activity
+            android:name=".ui.tabs.TabbedActivity"
+            android:label="@string/title_activity_tabbed"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <activity android:name=".ui.botton.BottonActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".RegistroActivity" />
+        <activity android:name=".ui.main.MainActivitiy" />
+        <activity android:name=".ui.login.LogInActivity2" />
+        <activity
+            android:name=".ui.splash.SplashActivity2"
+            android:theme="@style/NoActionBar" >
+
+
+        </activity>
+        <activity android:name=".ui.registro.RegistroActivity" />
     </application>
 
 </manifest>
